charts/resize-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: resize-deploy
  name: resize-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resize-deploy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: resize-deploy
    spec:
      serviceAccountName: s3-account
      containers:
      - image: 317884193661.dkr.ecr.eu-west-1.amazonaws.com/resize-cluster:6ddc77301410ae6eed0b0e36d7c34bbe4dc3d46b
        name: resize-api
        ports:
          - containerPort: 8888 
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1"
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8888
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthy
            port: 8888
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
status: {}
